--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <div>
+      <h1>sad</h1>
+    </div>
   </body>
 </html>
